[gd_scene load_steps=41 format=3 uid="uid://dd8b8qu4e6jme"]

[ext_resource type="Script" path="res://scripts/boid.gd" id="1_j73er"]
[ext_resource type="Texture2D" uid="uid://bodwmlsthyj68" path="res://assets/sprites/characters/people/scientist.png" id="2_mccus"]

[sub_resource type="AtlasTexture" id="AtlasTexture_og16s"]
atlas = ExtResource("2_mccus")
region = Rect2(0, 646, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpuyn"]
atlas = ExtResource("2_mccus")
region = Rect2(64, 646, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dujd2"]
atlas = ExtResource("2_mccus")
region = Rect2(128, 646, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0du1b"]
atlas = ExtResource("2_mccus")
region = Rect2(192, 646, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dc67"]
atlas = ExtResource("2_mccus")
region = Rect2(256, 646, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y8bu"]
atlas = ExtResource("2_mccus")
region = Rect2(320, 646, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nisj"]
atlas = ExtResource("2_mccus")
region = Rect2(384, 646, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d6we"]
atlas = ExtResource("2_mccus")
region = Rect2(448, 646, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7tuk"]
atlas = ExtResource("2_mccus")
region = Rect2(512, 646, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_as68i"]
atlas = ExtResource("2_mccus")
region = Rect2(0, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqqmo"]
atlas = ExtResource("2_mccus")
region = Rect2(64, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7o7is"]
atlas = ExtResource("2_mccus")
region = Rect2(128, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifout"]
atlas = ExtResource("2_mccus")
region = Rect2(192, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh4km"]
atlas = ExtResource("2_mccus")
region = Rect2(256, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8vtk"]
atlas = ExtResource("2_mccus")
region = Rect2(320, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7cmk"]
atlas = ExtResource("2_mccus")
region = Rect2(384, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_twlw1"]
atlas = ExtResource("2_mccus")
region = Rect2(448, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwqwn"]
atlas = ExtResource("2_mccus")
region = Rect2(512, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u26mx"]
atlas = ExtResource("2_mccus")
region = Rect2(0, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7b7y"]
atlas = ExtResource("2_mccus")
region = Rect2(64, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_maqdj"]
atlas = ExtResource("2_mccus")
region = Rect2(128, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cee1h"]
atlas = ExtResource("2_mccus")
region = Rect2(192, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n1q1"]
atlas = ExtResource("2_mccus")
region = Rect2(256, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3c0t"]
atlas = ExtResource("2_mccus")
region = Rect2(320, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcbj8"]
atlas = ExtResource("2_mccus")
region = Rect2(384, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc4as"]
atlas = ExtResource("2_mccus")
region = Rect2(448, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qk7x"]
atlas = ExtResource("2_mccus")
region = Rect2(512, 582, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u07s5"]
atlas = ExtResource("2_mccus")
region = Rect2(0, 518, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mdbl"]
atlas = ExtResource("2_mccus")
region = Rect2(64, 518, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkea7"]
atlas = ExtResource("2_mccus")
region = Rect2(128, 518, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1a6k"]
atlas = ExtResource("2_mccus")
region = Rect2(192, 518, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dglx"]
atlas = ExtResource("2_mccus")
region = Rect2(256, 518, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mw0nj"]
atlas = ExtResource("2_mccus")
region = Rect2(320, 518, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kst7p"]
atlas = ExtResource("2_mccus")
region = Rect2(384, 518, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_52rb4"]
atlas = ExtResource("2_mccus")
region = Rect2(448, 518, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmvgl"]
atlas = ExtResource("2_mccus")
region = Rect2(512, 518, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_5pjvm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_og16s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpuyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dujd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0du1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dc67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y8bu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nisj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d6we")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7tuk")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_as68i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqqmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7o7is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifout")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh4km")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8vtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7cmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twlw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwqwn")
}],
"loop": true,
"name": &"walk_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u26mx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7b7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_maqdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cee1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n1q1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3c0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcbj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc4as")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qk7x")
}],
"loop": true,
"name": &"walk_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u07s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mdbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkea7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1a6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dglx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mw0nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kst7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52rb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmvgl")
}],
"loop": true,
"name": &"walk_up",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qfxij"]
radius = 14.0357

[node name="Boid" type="CharacterBody2D"]
script = ExtResource("1_j73er")
max_speed = null
max_force = null
view_radius = null
view_angle_degrees = null
separation_distance = null
weight_separation = null
weight_alignment = null
weight_cohesion = null
weight_avoidance = null
raycast_length = null
minimum_speed = null

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5pjvm")
animation = &"walk_down"
frame = 6
frame_progress = 0.18692

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_qfxij")

[node name="RayUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -49)

[node name="RayDown" type="RayCast2D" parent="."]

[node name="RayLeft" type="RayCast2D" parent="."]
target_position = Vector2(-62, 1)

[node name="RayRight" type="RayCast2D" parent="."]
target_position = Vector2(66, 0)
